Fix: Update Supabase URL in configuration and add troubleshooting guide for magic link email errors

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Obtén estas claves en Project Settings > API en tu dashboard de Supabase
 
 # URL de tu proyecto (ej: https://xyz.supabase.co)
-SUPABASE_URL=tu_url_aqui
+SUPABASE_URL=https://jzzrnuxwjygtluuopewp.supabase.co
 
 # Clave anónima pública (anon / public)
 SUPABASE_ANON_KEY=tu_clave_anon_aqui
